# jasmin-metrics-client

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  catalog-info.yaml  pyproject.toml
.github/workflows/: check.yml  sphinx.yaml
.rename_github/workflows/: check.yml  publish.yml
_build/: .buildinfo  changelog.html  code_of_conduct.html  contributing.html  genindex.html  index.html  license.html  objects.inv  py-modindex.html  search.html  searchindex.js  security.html
_build/.doctrees/: changelog.doctree  code_of_conduct.doctree  contributing.doctree  environment.pickle  index.doctree  license.doctree  security.doctree
_build/.doctrees/autoapi/: index.doctree
_build/.doctrees/autoapi/jasmin_metrics_client/: index.doctree
_build/.doctrees/autoapi/jasmin_metrics_client/main/: index.doctree
_build/.doctrees/autoapi/jasmin_metrics_client/tests/: index.doctree
_build/.doctrees/autoapi/jasmin_metrics_client/tests/unit_tests/: index.doctree
_build/_sources/: index.rst.txt
_build/_sources/autoapi/jasmin_metrics_client/tests/: index.rst.txt
_build/_static/: documentation_options.js
_build/autoapi/: index.html
_build/autoapi/jasmin_metrics_client/: index.html
_build/autoapi/jasmin_metrics_client/main/: index.html
_build/autoapi/jasmin_metrics_client/tests/: index.html
_build/autoapi/jasmin_metrics_client/tests/unit_tests/: index.html
docs/: conf.py  index.rst
docs/autoapi/: index.rst
docs/autoapi/jasmin_metrics_client/: index.rst
docs/autoapi/jasmin_metrics_client/main/: index.rst
docs/autoapi/jasmin_metrics_client/tests/: index.rst
docs/autoapi/jasmin_metrics_client/tests/unit_tests/: index.rst
docs/autoapi/tests/: index.rst
docs/autoapi/tests/test_real_data/: index.rst
docs/autoapi/tests/unit_tests/: index.rst
docs/autoapi/tests/unit_tests/test_main/: index.rst
jasmin_metrics_client/: __init__.py  main.py
jasmin_metrics_client/tests/unit_tests/: test_main.py
tests/unit_tests/: test_main.py
(+4 files in other folders)
